--- a/app/src/components/projects/ProjectCarouselItem.css
+++ b/app/src/components/projects/ProjectCarouselItem.css
@@ -1,7 +1,7 @@
 .carousel-item-content {
     position: relative;
     width: 100%;
-    height: 400px; /* Adjust height as needed */
+    height: 25rem;
     display: flex;
     justify-content: center;
     align-items: center;
