--- a/app/src/pages/projects/project_pages/MinecraftSMP.css
+++ b/app/src/pages/projects/project_pages/MinecraftSMP.css
@@ -32,54 +32,20 @@
   border: 1px solid #2b3035;
 }
 
-.tabs-container {
+.transparent-container {
   position: relative;
   z-index: 1;
-  margin-top: 20px;
-}
-
-.nav-tabs .nav-link {
-  background-color: rgba(0, 0, 0, 0.7);
   color: #f8f9fa;
+  text-align: center;
+  background-color: rgba(0, 0, 0, 0.5);
   border: 1px solid #f8f9fa;
+  padding: 20px;
+  border-radius: 8px;
+  margin-top: 50px;
 }
 
-[data-bs-theme="light"] .nav-tabs .nav-link {
-  background-color: rgba(248, 249, 250, 0.7);
-  color: #2b3035;
-  border: 1px solid #2b3035;
-}
-
-.nav-tabs .nav-link.active {
-  background-color: rgba(0, 0, 0, 0.9);
-  border-color: #f8f9fa;
-}
-
-[data-bs-theme="light"] .nav-tabs .nav-link.active {
-  background-color: rgba(248, 249, 250, 0.9);
-  border-color: #2b3035;
-}
-
-.carousel-caption h3, .carousel-caption p {
-  color: #f8f9fa;
-}
-
-[data-bs-theme="light"] .carousel-caption h3, [data-bs-theme="light"] .carousel-caption p {
-  color: #2b3035;
-}
-
-.card-deck {
-  margin-top: 20px;
-}
-
-.card {
-  background-color: rgba(0, 0, 0, 0.7);
-  color: #f8f9fa;
-  border: 1px solid #f8f9fa;
-}
-
-[data-bs-theme="light"] .card {
-  background-color: rgba(248, 249, 250, 0.7);
+[data-bs-theme="light"] .transparent-container {
+  background-color: rgba(248, 249, 250, 0.5);
   color: #2b3035;
   border: 1px solid #2b3035;
 }
