--- a/app/src/pages/projects/project_pages/MinecraftSMP.css
+++ b/app/src/pages/projects/project_pages/MinecraftSMP.css
@@ -1,4 +1,3 @@
-/* MinecraftSMP.css */
 .background-container {
   position: fixed;
   top: 0;
@@ -19,7 +18,7 @@
   z-index: 1;
   color: #f8f9fa;
   text-align: center;
-  background-color: rgba(0, 0, 0, 0.5);
+  background-color: rgba(0, 0, 0, 0.7);
   border: 1px solid #f8f9fa;
   padding: 20px;
   border-radius: 8px;
@@ -27,7 +26,7 @@
 }
 
 [data-bs-theme="light"] .content {
-  background-color: rgba(248, 249, 250, 0.5);
+  background-color: rgba(248, 249, 250, 0.7);
   color: #2b3035;
   border: 1px solid #2b3035;
 }
@@ -37,7 +36,7 @@
   z-index: 1;
   color: #f8f9fa;
   text-align: center;
-  background-color: rgba(0, 0, 0, 0.5);
+  background-color: rgba(0, 0, 0, 0.7);
   border: 1px solid #f8f9fa;
   padding: 20px;
   border-radius: 8px;
@@ -45,7 +44,12 @@
 }
 
 [data-bs-theme="light"] .transparent-container {
-  background-color: rgba(248, 249, 250, 0.5);
+  background-color: rgba(248, 249, 250, 0.7);
   color: #2b3035;
   border: 1px solid #2b3035;
+}
+
+.note {
+  font-size: 0.85em;
+  color: #6c757d;
 }
