--- a/app/src/pages/projects/project_pages/ArcadeMap.css
+++ b/app/src/pages/projects/project_pages/ArcadeMap.css
@@ -8,8 +8,6 @@
   padding: 20px;
   border-radius: 8px;
   margin-top: 50px;
-  width: 100%;
-  height: 100%;
 }
 
 [data-bs-theme="light"] .content {
@@ -20,7 +18,13 @@
  
 .map-embed {
   width: 100%;
-  height: 100%;
+  height: calc(100vh - 340px);
   border: 0;
 }
-  
+
+/* Adjust height for mobile devices */
+@media (max-width: 768px) {
+    .map-embed {
+      height: calc(100vh - 400px);
+    }
+  }
